@@ -1,5 +1,15 @@
 2008-08-13  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	Assume system provides tmpfile(3).
+
+	* libpq.c [!HAVE_TMPFILE]: Don't #include "tmpfile.h";
+	don't #define tmpfile to the locally-provided one.
+	* Makefile.am (postgres_la_SOURCES): Remove tmpfile.c.
+	* tmpfile.h: Delete file.
+	* tmpfile.c: Delete file.
+
+2008-08-13  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	Consolidate Guile API specification.
 
 	* bcruft.h: Delete file.
